[package]
authors = ['Joe Bowman <joe@chorus.one>', 'Parth Desai <parth@chorus.one>']
description = 'Wormhole Tendermint Client'
edition = '2018'
homepage = 'https://chorus.one/wormhole'
license = 'Apache 2.0'
name = 'tendermint-client'
repository = 'https://github.com/ChorusOne/substrate-tendermint-client/'
version = '0.0.1'

[dependencies]
serde = {version = '1', default-features = false }
serde_json = {version = '1', default-features = false }
sha2 = { version =  "0.8", default-features = false }

[dependencies.lazy_static]
version = "1.4.0"
features = ['spin_no_std']

[dependencies.slab]
version = "0.4.2"
git = "https://github.com/baloo/slab"
branch = "baloo/no_std-support"

[dependencies.clear_on_drop]
version = "0.2.3"
features = ["no_cc"]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dependencies.light-client]
default-features = false
git = "https://github.com/joe-bowman/tendermint-rs.git"
branch = "wasm"
version = "0.1.0"

[dependencies.tendermint]
default-features = false
git = "https://github.com/joe-bowman/tendermint-rs.git"
branch = "wasm"
version = "0.13.0"

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc2'
version = '2.0.0-rc2'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
