[package]
authors = ['Joe Bowman <joe@chorus.one>', 'Parth Desai <parth@chorus.one>']
description = 'Wormhole Tendermint Client'
edition = '2018'
homepage = 'https://chorus.one/wormhole'
license = 'Apache 2.0'
name = 'tendermint-client'
repository = 'https://github.com/ChorusOne/substrate-tendermint-client/'
version = '0.0.1'

[dependencies]
serde = {version = '1', default-features = false, features = ['derive', 'alloc'] }
serde_json = {version = '1', default-features = false, features = ['alloc'] }
sha2 = { version =  "0.8", default-features = false }
log = { version = "0.4.8", default-features = false }
chrono = { version = "0.4.11", default-features = false }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.frame-support]
default-features = false
version = '2.0.1'

[dependencies.frame-system]
default-features = false
version = '2.0.1'

[dependencies.tendermint_light_client]
default-features = false
git = "https://github.com/ChorusOne/tendermint_light_client.git"
branch = "master"
version = "0.4.0"

[dev-dependencies.sp-core]
default-features = false
version = '2.0.1'

[dependencies.sp-std]
default-features = false
version = '2.0.1'

[dev-dependencies.sp-io]
default-features = false
version = '2.0.1'

[dev-dependencies.sp-runtime]
default-features = false
version = '2.0.1'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
